[package]
name = "fltk-egui"
version = "0.8.0"
edition = "2021"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>", "Adia Robbie <adyaro37@gmail.com>"]
description = "FLTK backend for egui"
repository = "https://github.com/fltk-rs/fltk-egui"
documentation = "https://docs.rs/fltk-egui"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
rust-version = "1.61"

[dependencies]
egui = "0.19"
egui_glow = { version = "0.19", default-features = false }
arboard = { version = "2", default-features = false }
fltk = { version = "1.3", features = ["enable-glwindow"] }

# for the demo_windows example
[dev-dependencies]
egui_demo_lib = "0.19"
three-d = "0.13"

[features]
wayland = ["fltk/use-wayland"]
no-pango = ["fltk/no-pango"]
