[package]
name = "fltk-egui"
version = "0.11.0"
edition = "2021"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>", "Adia Robbie <adyaro37@gmail.com>"]
description = "FLTK backend for egui"
repository = "https://github.com/fltk-rs/fltk-egui"
documentation = "https://docs.rs/fltk-egui"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
rust-version = "1.65"

[dependencies]
egui = { version = "0.22" }
egui_glow = { version = "0.22", default-features = false }
arboard = { version = "3", default-features = false }
fltk = { version = "1.4", features = ["enable-glwindow"] }

# for the demo_windows example
[dev-dependencies]
egui_demo_lib = { version = "0.22" }
three-d = { version = "0.15", default-features = false }

[features]
wayland = ["fltk/use-wayland"]
no-pango = ["fltk/no-pango"]
